--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h1>Shitbros</h1>
         </div>
 
-      <img height="600" src="images/2shitboys.png"/>
+      <img height="600" src="images/2shitboys.jpg"/>
       <div id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
